Removed unused lines